[gd_scene load_steps=22 format=3 uid="uid://edvochogjyx3"]

[ext_resource type="Texture2D" uid="uid://dd7op6wqu6hpt" path="res://addons/Tiny Swords/Factions/Knights/Troops/Warrior/Red/Warrior_Red.png" id="1_fmrr8"]
[ext_resource type="Script" path="res://Player/player.gd" id="1_m1thj"]
[ext_resource type="PackedScene" uid="uid://d4et31hraht5g" path="res://Misc/powerMove.tscn" id="2_1uogc"]
[ext_resource type="PackedScene" uid="uid://b6juqbcdcmpgt" path="res://Misc/playerSkull.tscn" id="2_d58af"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_8piml"]
radius = 16.0
height = 58.0

[sub_resource type="Animation" id="Animation_2w1ls"]
resource_name = "AttackDown1"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 4), Vector2i(1, 4), Vector2i(2, 4), Vector2i(3, 4), Vector2i(4, 4), Vector2i(5, 4)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"damage2Enemies"
}]
}

[sub_resource type="Animation" id="Animation_umf48"]
resource_name = "AttackDown2"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 5), Vector2i(1, 5), Vector2i(2, 5), Vector2i(3, 5), Vector2i(4, 5), Vector2i(5, 5)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"damage2Enemies"
}]
}

[sub_resource type="Animation" id="Animation_1rfu8"]
resource_name = "AttackSide1"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 2), Vector2i(1, 2), Vector2i(2, 2), Vector2i(3, 2), Vector2i(4, 2), Vector2i(5, 2)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"damage2Enemies"
}]
}

[sub_resource type="Animation" id="Animation_5nlji"]
resource_name = "AttackSide2"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 3), Vector2i(1, 3), Vector2i(2, 3), Vector2i(3, 3), Vector2i(4, 3), Vector2i(5, 3)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"damage2Enemies"
}]
}

[sub_resource type="Animation" id="Animation_co46o"]
resource_name = "AttackUp1"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 6), Vector2i(1, 6), Vector2i(2, 6), Vector2i(3, 6), Vector2i(4, 6), Vector2i(5, 6)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"damage2Enemies"
}]
}

[sub_resource type="Animation" id="Animation_iayvv"]
resource_name = "AttackUp2"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 7), Vector2i(1, 7), Vector2i(2, 7), Vector2i(3, 7), Vector2i(4, 7), Vector2i(5, 7)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"damage2Enemies"
}]
}

[sub_resource type="Animation" id="Animation_kjp8j"]
resource_name = "Iddle"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 0), Vector2i(1, 0), Vector2i(2, 0), Vector2i(3, 0), Vector2i(4, 0), Vector2i(4, 0)]
}

[sub_resource type="Animation" id="Animation_c4x0r"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}

[sub_resource type="Animation" id="Animation_814su"]
resource_name = "Run"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 1), Vector2i(1, 1), Vector2i(2, 1), Vector2i(3, 1), Vector2i(4, 1), Vector2i(5, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_w26ag"]
_data = {
"AttackDown1": SubResource("Animation_2w1ls"),
"AttackDown2": SubResource("Animation_umf48"),
"AttackSide1": SubResource("Animation_1rfu8"),
"AttackSide2": SubResource("Animation_5nlji"),
"AttackUp1": SubResource("Animation_co46o"),
"AttackUp2": SubResource("Animation_iayvv"),
"Iddle": SubResource("Animation_kjp8j"),
"RESET": SubResource("Animation_c4x0r"),
"Run": SubResource("Animation_814su")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_n6umi"]
radius = 15.0362

[sub_resource type="CircleShape2D" id="CircleShape2D_klk6w"]
radius = 48.0416

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bfbde"]
bg_color = Color(0.00234459, 0.00234459, 0.00234459, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_08gbp"]
bg_color = Color(0.839781, 0.0729114, 0.0171953, 1)

[sub_resource type="SystemFont" id="SystemFont_rqxye"]
font_names = PackedStringArray("Arial")
font_weight = 425

[sub_resource type="LabelSettings" id="LabelSettings_lvycq"]
resource_local_to_scene = true
line_spacing = 0.0
font = SubResource("SystemFont_rqxye")
font_size = 24
font_color = Color(5.70074e-05, 0.00358168, 3.76021e-10, 1)
outline_size = 1
outline_color = Color(0.0121183, 0.0121183, 0.0121183, 1)

[node name="Player" type="CharacterBody2D" groups=["player"]]
script = ExtResource("1_m1thj")
powerDamage = 20
powerInterval = 5.0
powerScene = ExtResource("2_1uogc")
deathPrefab = ExtResource("2_d58af")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(0, -29)
texture = ExtResource("1_fmrr8")
hframes = 6
vframes = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, -28)
shape = SubResource("CapsuleShape2D_8piml")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_w26ag")
}
autoplay = "Iddle"

[node name="SwordArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="SwordArea"]
position = Vector2(14, -29)
scale = Vector2(5.52, 5.36)
shape = SubResource("CircleShape2D_n6umi")
debug_color = Color(0.894118, 0.282353, 0.396078, 0)

[node name="DamageArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageArea"]
position = Vector2(-2, -42)
shape = SubResource("CircleShape2D_klk6w")
debug_color = Color(0.65098, 0.517647, 0.117647, 0)

[node name="HealthPlayerProgressBar" type="ProgressBar" parent="."]
texture_filter = 1
custom_minimum_size = Vector2(3, 3)
offset_left = -57.0
offset_top = 18.0
offset_right = 176.0
offset_bottom = 80.0
scale = Vector2(0.5, 0.166)
theme_override_styles/background = SubResource("StyleBoxFlat_bfbde")
theme_override_styles/fill = SubResource("StyleBoxFlat_08gbp")
value = 100.0
show_percentage = false

[node name="Label" type="Label" parent="HealthPlayerProgressBar"]
visible = false
layout_mode = 1
offset_left = -1.0
offset_top = -57.0
offset_right = 46.0
offset_bottom = -2.0
text = "Life:"
label_settings = SubResource("LabelSettings_lvycq")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 1
